@@ -1,4 +1,7 @@
-
+/*
+ * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
+ * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
+ */
 
 import java.io.File;
 import java.io.FileNotFoundException;
@@ -6,6 +9,7 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Scanner;
 
 /**
@@ -17,6 +21,7 @@ public class TuSach {
     private static int sachDaHienThi = 0;
     private ArrayList<Sach> books = new ArrayList<>();
 
+    
     public TuSach() {
         this.soSach = 0;
     }
@@ -36,6 +41,11 @@ public class TuSach {
     public void setBooks(ArrayList<Sach> books) {
         this.books = books;
     }
+    public void setBooks(Sach sach)
+    {
+        this.books.add(sach);
+    }
+    
     
     public void themSach() {
         Scanner input = new Scanner(System.in);
@@ -54,14 +64,14 @@ public class TuSach {
             case "1":
                 sach = new SachGiay();
                 ((SachGiay) sach).nhapThongTinSachChoNhanVien();
-                books.add(sach);
+                this.setBooks(sach);
                 soSach++;
                 vietSachVaoFile(choice);
                 break;
             case "2":
                 sach = new SachMem();
-                ((SachMem) sach).nhapThongTinSachMem();
-                books.add(sach);
+                ((SachMem) sach).nhapThongTinSachChoNhanVien();
+                this.setBooks(sach);
                 soSach++;
                 vietSachVaoFile(choice);
                 break;
@@ -73,12 +83,12 @@ public class TuSach {
             tiepTuc=input.nextLine();
         }while(!tiepTuc.equalsIgnoreCase("N"));  
     }
-    public void vietSachVaoFile(String choice) {
-        String fileName = "D:\\Lap trinh java\\BookStore\\Sach.txt";
+    private void vietSachVaoFile(String choice) {
+        String fileName = "book.txt";
         File file = new File(fileName);
 
         try (FileWriter fileWriter = new FileWriter(file, true)) {
-            for (Sach sach : books) {
+            for (Sach sach : this.getBooks()) {
                 StringBuilder sb = new StringBuilder();
                 sb.append(sach.getTenSach()).append("#");
                 sb.append(sach.getMaSach()).append("#");
@@ -86,7 +96,7 @@ public class TuSach {
                 sb.append(sach.getSoTrang()).append("#");
                 sb.append(sach.getTheLoai()).append("#");
                 sb.append(sach.getNXB()).append("#");
-                sb.append(sach.getgia()).append("#");
+                sb.append(sach.getGia()).append("#");
                 sb.append(sach.getMoTa()).append("#");
 
                 if (sach instanceof SachGiay) {
@@ -107,70 +117,20 @@ public class TuSach {
                 sb.append(System.lineSeparator());
                 fileWriter.write(sb.toString());   
             }
-            books.clear();
+            this.getBooks().clear();
             fileWriter.flush();
             System.out.println("Viet sach vao file thanh cong.....");
         } catch (IOException e) {
             System.out.println("Khong hop le" + e.getMessage());
         }
     }
-    public void xoaSachTheoID(){
-        Scanner input = new Scanner(System.in);
-        String canXoa = input.nextLine();
-        try{
-            File inputFile = new File("D:\\Lap trinh java\\BookStore\\book.txt");
-            File tempFile = new File("TempBook.txt");
-            Scanner scanner = new Scanner(inputFile);
-            FileWriter writer = new FileWriter(tempFile);
-            
-            while(scanner.hasNextLine()){
-                String currentLine = scanner.nextLine();
-                String[] bookDetails = currentLine.split("#");
-                if(bookDetails.length>1 && bookDetails[1].equalsIgnoreCase(canXoa)){
-                    continue; //Skip writing this line to the temporary file (delete it)
-                }
-                writer.write(currentLine + System.lineSeparator()); //Write into temporary file
-            }
-            writer.close();
-            scanner.close();
-            
-            //Replace the original file with the updated one
-            if(inputFile.delete()){
-                if(!tempFile.renameTo(inputFile)){
-                    throw new IOException("Khong the cap nhat ten file.....");
-                }
-                System.out.println("Xoa sach thanh cong <3");
-            }else{
-                throw new IOException("Khong the xoa file goc.....");
-            }
-        }catch(IOException e){
-            System.out.println("Co loi khi thao tac voi file: " + e.getMessage());
-        }
-        
-        
-    }
     
-    public void xoaSachTheoTen(){
-        Scanner input = new Scanner(System.in);
-        System.out.println("Nhap ten sach ban muon xoa: ");
-        String tenSachCanXoa = input.nextLine();
-        
-        Iterator<Sach> iterator = books.iterator();
-        while(iterator.hasNext()){
-            Sach sach = iterator.next();
-            if(sach.getTenSach().equalsIgnoreCase(tenSachCanXoa)){
-                iterator.remove();
-                soSach--;
-                System.out.println("Xoa sach thanh cong <3");
-                break;
-            }
-        }
-    }
-    public void timSachTheoTen(){
+    
+    private void timSachTheoTen(){
         Scanner input = new Scanner(System.in);
         System.out.println("Nhap ten sach ban muon tim: ");
         String tenSachCanTim = input.nextLine();
-        while(!tenSachCanTim.matches("^[a-zA-Z0-9\\s]+$")||tenSachCanTim.isBlank()){
+        while(!tenSachCanTim.matches("^[a-zA-Z0-9\\s]+$")||tenSachCanTim.trim().isEmpty()){
             System.out.println("Lua chon khong phu hop, vui long nhap lai.....");
             tenSachCanTim=input.nextLine();
         }
@@ -181,7 +141,6 @@ public class TuSach {
             System.out.println("\n+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+");
             System.out.println("|                                                                    THONG TIN SACH                                                                                                                                                                                 |");
             System.out.println("|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|");
-//            System.out.println("|"+"                      Ten Sach                     |" +"  Ma Sach "+"|" + "          Tac Gia              |"+"So Trang  "+"|"+ "     The Loai   |"+ "       NXB      "+"|"+ "    Gia    |"+"                            Mo Ta                  |"+ " Loai Sach|"+ " Size|"+ " Loai Bia |"+ "FSize|"+ "Dung Luong|"+ " So Luong |");
             System.out.printf("| %-50s| %-10s| %-30s| %-9s| %-15s| %-15s| %-10s| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", "Ten Sach", "Ma Sach", "Tac Gia", "So Trang", "The Loai", "NXB", "Gia", "Mo Ta", "Loai Sach","Size","Loai Bia","FSize","Dung Luong","So Luong", "|");
             System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
             while(scanner.hasNextLine()){   //từ đây đến else if là để input dữ liệu từ chuỗi thông tin về sách vào các mục tương ứng
@@ -208,19 +167,22 @@ public class TuSach {
                     dungLuong="////";
                     soLuong=sachDuocDoc[13];
                 }
-                else if(loaiSach.toLowerCase().equalsIgnoreCase("PDf")||loaiSach.toLowerCase().equalsIgnoreCase("EPUB")){
+                else if(loaiSach.equalsIgnoreCase("PDf")||loaiSach.equalsIgnoreCase("EPUB")){
                     kichThuoc="////";
                     loaiBia="////";
                     kichCoDungLuong = sachDuocDoc[11];
                     dungLuong =sachDuocDoc[12];
                     soLuong="////";
                 }
-                if(tenSach.toLowerCase().contains(tenSachCanTim)){  //phần này để xét điều kiện để chọn các sách phù hợp yêu cầu để hiển thị
+                if(tenSach.contains(tenSachCanTim)){  //phần này để xét điều kiện để chọn các sách phù hợp yêu cầu để hiển thị
                     System.out.printf("| %-50s| %-10s| %-30s| %-9d| %-15s| %-15s| %-10.3f| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", tenSach, maSach, tacGia, soTrang, theloai, nXB, Gia, moTa, loaiSach, kichThuoc, loaiBia, kichCoDungLuong, dungLuong,soLuong,"|");
                     System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
                     found = true;
                    //break; //ngừng tìm khi sách đã được tìm thấy
                 }
+                try{
+                    Thread.sleep(50);
+                    }catch(InterruptedException e){}
             }
             
         }catch(IOException e){
@@ -230,11 +192,11 @@ public class TuSach {
         if(!found) //(found) có nghĩa là cách viết khác của found==true, vậy !found tức là false
             System.out.println("Khong tim thay sach.....");
     }
-    public void timSachTheoID(){
+    private void timSachTheoID(){
         Scanner input = new Scanner(System.in);
         System.out.println("Nhap ma sach ban muon tim: ");
         String maSachCanTim = input.nextLine();
-        while(!maSachCanTim.matches("^[a-zA-Z0-9\\s]+$")||maSachCanTim.isBlank()){
+        while(!maSachCanTim.matches("^[a-zA-Z0-9\\s]+$")||maSachCanTim.trim().isEmpty()){
             System.out.println("Lua chon khong phu hop, vui long nhap lai.....");
             maSachCanTim=input.nextLine();
         }
@@ -245,7 +207,6 @@ public class TuSach {
             System.out.println("\n+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+");
             System.out.println("|                                                                    THONG TIN SACH                                                                                                                                                                                 |");
             System.out.println("|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|");
-//            System.out.println("|"+"                      Ten Sach                     |" +"  Ma Sach "+"|" + "          Tac Gia              |"+"So Trang  "+"|"+ "     The Loai   |"+ "       NXB      "+"|"+ "    Gia    |"+"                            Mo Ta                  |"+ " Loai Sach|"+ " Size|"+ " Loai Bia |"+ "FSize|"+ "Dung Luong|"+ " So Luong |");
             System.out.printf("| %-50s| %-10s| %-30s| %-9s| %-15s| %-15s| %-10s| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", "Ten Sach", "Ma Sach", "Tac Gia", "So Trang", "The Loai", "NXB", "Gia", "Mo Ta", "Loai Sach","Size","Loai Bia","FSize","Dung Luong","So Luong", "|");
             System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
             while(scanner.hasNextLine()){
@@ -272,7 +233,7 @@ public class TuSach {
                     dungLuong="////";
                     soLuong=sachDuocDoc[13];
                 }
-                else if(loaiSach.toLowerCase().equalsIgnoreCase("PDf")||loaiSach.toLowerCase().equalsIgnoreCase("EPUB")){
+                else if(loaiSach.equalsIgnoreCase("PDf")||loaiSach.equalsIgnoreCase("EPUB")){
                     kichThuoc="////";
                     loaiBia="////";
                     kichCoDungLuong = sachDuocDoc[11];
@@ -280,11 +241,15 @@ public class TuSach {
                     soLuong="////";
                 }
                 
-                if(maSach.toLowerCase().contains(maSachCanTim)){
+                if(maSach.contains(maSachCanTim)){
                     System.out.printf("| %-50s| %-10s| %-30s| %-9d| %-15s| %-15s| %-10.3f| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", tenSach, maSach, tacGia, soTrang, theloai, nXB, Gia, moTa, loaiSach, kichThuoc, loaiBia, kichCoDungLuong, dungLuong,soLuong,"|");
                     System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
                     found = true;
                 }
+                try{
+                    Thread.sleep(50);
+                    }catch(InterruptedException e){}
+                                    
             }
         }catch(IOException e){
             System.out.println("Khong doc duoc file.....\n" + e.getMessage());
@@ -293,10 +258,11 @@ public class TuSach {
         if(!found)
             System.out.println("Khong tim thay sach.....");
     }
+    
     public Sach timSachTheoID(String id){
         String maSachCanTim = id;
         Sach foundSach=null;
-        while(!maSachCanTim.matches("^[a-zA-Z0-9\\s]+$")||maSachCanTim.isBlank()){
+        while(!maSachCanTim.matches("^[a-zA-Z0-9\\s]+$") || maSachCanTim.trim().isEmpty()){
             return foundSach;
         }
         String fileName = "book.txt";
@@ -326,14 +292,13 @@ public class TuSach {
                     dungLuong="////";
                     soLuong=Integer.parseInt(sachDuocDoc[13]);
                 }
-                else if(loaiSach.toLowerCase().equalsIgnoreCase("PDF")||loaiSach.toLowerCase().equalsIgnoreCase("EPUB")){
+                else if(loaiSach.equalsIgnoreCase("PDF")||loaiSach.equalsIgnoreCase("EPUB")){
                     kichThuoc="////";
                     loaiBia="////";
                     kichCoDungLuong = sachDuocDoc[11];
                     dungLuong =sachDuocDoc[12];
                     soLuong=0;
                 }
-//                (String tenSach,String maSach,String tacGia,int soTrang,String theLoai,String NXB,double gia,String moTa,String loaiSach,int soLuong)
                 if(maSach.equalsIgnoreCase(maSachCanTim)){
                     foundSach=new Sach(tenSach,maSach,tacGia,soTrang,theLoai,NXB,gia,moTa,loaiSach,soLuong);
                 }
@@ -343,11 +308,14 @@ public class TuSach {
         }
         return foundSach;
     }
-    public void timSachTheoTG(){
+    
+    
+    
+    private void timSachTheoTG(){
         Scanner input = new Scanner(System.in);
         System.out.println("Nhap ten tac gia ma ban muon tim: ");
         String tgCanTim = input.nextLine();
-        while(!tgCanTim.matches("^[a-zA-Z\\s]+$")||tgCanTim.isBlank()){
+        while(!tgCanTim.matches("^[a-zA-Z\\s]+$")||tgCanTim.trim().isEmpty()){
             System.out.println("Lua chon khong phu hop, vui long nhap lai.....");
             tgCanTim=input.nextLine();
         }
@@ -358,7 +326,6 @@ public class TuSach {
             System.out.println("\n+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+");
             System.out.println("|                                                                    THONG TIN SACH                                                                                                                                                                                 |");
             System.out.println("|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|");
-//            System.out.println("|"+"                      Ten Sach                     |" +"  Ma Sach "+"|" + "          Tac Gia              |"+"So Trang  "+"|"+ "     The Loai   |"+ "       NXB      "+"|"+ "    Gia    |"+"                            Mo Ta                  |"+ " Loai Sach|"+ " Size|"+ " Loai Bia |"+ "FSize|"+ "Dung Luong|"+ " So Luong |");
             System.out.printf("| %-50s| %-10s| %-30s| %-9s| %-15s| %-15s| %-10s| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", "Ten Sach", "Ma Sach", "Tac Gia", "So Trang", "The Loai", "NXB", "Gia", "Mo Ta", "Loai Sach","Size","Loai Bia","FSize","Dung Luong","So Luong", "|");
             System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
             while(scanner.hasNextLine()){
@@ -385,7 +352,7 @@ public class TuSach {
                     dungLuong="////";
                     soLuong=sachDuocDoc[13];
                 }
-                else if(loaiSach.toLowerCase().equalsIgnoreCase("PDf")||loaiSach.toLowerCase().equalsIgnoreCase("EPUB")){
+                else if(loaiSach.equalsIgnoreCase("PDf")||loaiSach.equalsIgnoreCase("EPUB")){
                     kichThuoc="////";
                     loaiBia="////";
                     kichCoDungLuong = sachDuocDoc[11];
@@ -393,11 +360,14 @@ public class TuSach {
                     soLuong="////";
                 }
                 
-                if(tacGia.toLowerCase().contains(tgCanTim)){
+                if(tacGia.contains(tgCanTim)){
                     System.out.printf("| %-50s| %-10s| %-30s| %-9d| %-15s| %-15s| %-10.3f| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", tenSach, maSach, tacGia, soTrang, theloai, nXB, Gia, moTa, loaiSach, kichThuoc, loaiBia, kichCoDungLuong, dungLuong,soLuong,"|");
                     System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
                     found = true;
                 }
+                                try{
+                    Thread.sleep(50);
+                    }catch(InterruptedException e){}
             }
         }catch(IOException e){
             System.out.println("Khong doc duoc file.....\n" + e.getMessage());
@@ -406,11 +376,11 @@ public class TuSach {
         if(!found)
             System.out.println("Khong tim thay sach.....");
     }
-    public void timSachTheoNXB(){
+    private void timSachTheoNXB(){
         Scanner input = new Scanner(System.in);
         System.out.println("Nhap NXB ma ban muon tim: ");
         String nxbCanTim = input.nextLine();
-        while(!nxbCanTim.matches("^[a-zA-Z\\s]+$")||nxbCanTim.isBlank()){
+        while(!nxbCanTim.matches("^[a-zA-Z\\s]+$")||nxbCanTim.trim().isEmpty()){
             System.out.println("Lua chon khong phu hop, vui long nhap lai.....");
             nxbCanTim=input.nextLine();
         }
@@ -421,7 +391,6 @@ public class TuSach {
             System.out.println("\n+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+");
             System.out.println("|                                                                    THONG TIN SACH                                                                                                                                                                                 |");
             System.out.println("|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|");
-//            System.out.println("|"+"                      Ten Sach                     |" +"  Ma Sach "+"|" + "          Tac Gia              |"+"So Trang  "+"|"+ "     The Loai   |"+ "       NXB      "+"|"+ "    Gia    |"+"                            Mo Ta                  |"+ " Loai Sach|"+ " Size|"+ " Loai Bia |"+ "FSize|"+ "Dung Luong|"+ " So Luong |");
             System.out.printf("| %-50s| %-10s| %-30s| %-9s| %-15s| %-15s| %-10s| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", "Ten Sach", "Ma Sach", "Tac Gia", "So Trang", "The Loai", "NXB", "Gia", "Mo Ta", "Loai Sach","Size","Loai Bia","FSize","Dung Luong","So Luong", "|");
             System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
             while(scanner.hasNextLine()){
@@ -448,7 +417,7 @@ public class TuSach {
                     dungLuong="////";
                     soLuong=sachDuocDoc[13];
                 }
-                else if(loaiSach.toLowerCase().equalsIgnoreCase("PDf")||loaiSach.toLowerCase().equalsIgnoreCase("EPUB")){
+                else if(loaiSach.equalsIgnoreCase("PDf")||loaiSach.equalsIgnoreCase("EPUB")){
                     kichThuoc="////";
                     loaiBia="////";
                     kichCoDungLuong = sachDuocDoc[11];
@@ -456,11 +425,14 @@ public class TuSach {
                     soLuong="////";
                 }
                 
-                if(nXB.toLowerCase().contains(nxbCanTim)){
+                if(nXB.contains(nxbCanTim)){
                     System.out.printf("| %-50s| %-10s| %-30s| %-9d| %-15s| %-15s| %-10.3f| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", tenSach, maSach, tacGia, soTrang, theloai, nXB, Gia, moTa, loaiSach, kichThuoc, loaiBia, kichCoDungLuong, dungLuong,soLuong,"|");
                     System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
                     found = true;
                 }
+                                try{
+                    Thread.sleep(50);
+                    }catch(InterruptedException e){}
             }
         }catch(IOException e){
             System.out.println("Khong doc duoc file.....\n" + e.getMessage());
@@ -469,7 +441,7 @@ public class TuSach {
         if(!found)
             System.out.println("Khong tim thay sach.....");
     }
-    public void timSachTheoKhoangGia(){
+    private void timSachTheoKhoangGia(){
         boolean found = false;
         String fileName = "book.txt";
         File file = new File(fileName);
@@ -483,7 +455,6 @@ public class TuSach {
             System.out.println("\n+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+");
             System.out.println("|                                                                    THONG TIN SACH                                                                                                                                                                                 |");
             System.out.println("|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|");
-//            System.out.println("|"+"                      Ten Sach                     |" +"  Ma Sach "+"|" + "          Tac Gia              |"+"So Trang  "+"|"+ "     The Loai   |"+ "       NXB      "+"|"+ "    Gia    |"+"                            Mo Ta                  |"+ " Loai Sach|"+ " Size|"+ " Loai Bia |"+ "FSize|"+ "Dung Luong|"+ " So Luong |");
             System.out.printf("| %-50s| %-10s| %-30s| %-9s| %-15s| %-15s| %-10s| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", "Ten Sach", "Ma Sach", "Tac Gia", "So Trang", "The Loai", "NXB", "Gia", "Mo Ta", "Loai Sach","Size","Loai Bia","FSize","Dung Luong","So Luong", "|");
             System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
             while(scanner.hasNextLine()){    
@@ -510,7 +481,7 @@ public class TuSach {
                     dungLuong="////";
                     soLuong=sachDuocDoc[13];
                 }
-                else if(loaiSach.toLowerCase().equalsIgnoreCase("PDf")||loaiSach.toLowerCase().equalsIgnoreCase("EPUB")){
+                else if(loaiSach.equalsIgnoreCase("PDf")||loaiSach.equalsIgnoreCase("EPUB")){
                     kichThuoc="////";
                     loaiBia="////";
                     kichCoDungLuong = sachDuocDoc[11];
@@ -522,6 +493,9 @@ public class TuSach {
                     System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
                     found = true;
                 }
+                                try{
+                    Thread.sleep(50);
+                    }catch(InterruptedException e){}
             }
         }catch(IOException e){
             System.out.println("Khong doc duoc file.....\n" + e.getMessage());
@@ -529,11 +503,11 @@ public class TuSach {
         if(!found)
             System.out.println("\nKhong co sach trong khoang nay...");
     }
-    public void timSachTheoTheLoai(){
+    private void timSachTheoTheLoai(){
         Scanner input = new Scanner(System.in);
         System.out.println("Nhap the loai ban muon tim kiem: ");
         String theLoaiCanTim = input.nextLine();
-        while(!theLoaiCanTim.matches("^[a-zA-Z\\s]+$")||theLoaiCanTim.isBlank()){
+        while(!theLoaiCanTim.matches("^[a-zA-Z\\s]+$")||theLoaiCanTim.trim().isEmpty()){
             System.out.println("Lua chon khong phu hop, vui long nhap lai.....");
             theLoaiCanTim=input.nextLine();
         }
@@ -544,7 +518,6 @@ public class TuSach {
             System.out.println("\n\n+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+");
             System.out.println("|                                                                    THONG TIN SACH                                                                                                                                                                                 |");
             System.out.println("|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|");
-//            System.out.println("|"+"                      Ten Sach                     |" +"  Ma Sach "+"|" + "          Tac Gia              |"+"So Trang  "+"|"+ "     The Loai   |"+ "       NXB      "+"|"+ "    Gia    |"+"                            Mo Ta                  |"+ " Loai Sach|"+ " Size|"+ " Loai Bia |"+ "FSize|"+ "Dung Luong|"+ " So Luong |");
             System.out.printf("| %-50s| %-10s| %-30s| %-9s| %-15s| %-15s| %-10s| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", "Ten Sach", "Ma Sach", "Tac Gia", "So Trang", "The Loai", "NXB", "Gia", "Mo Ta", "Loai Sach","Size","Loai Bia","FSize","Dung Luong","So Luong", "|");
             System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
             while(scanner.hasNextLine()){ 
@@ -571,7 +544,7 @@ public class TuSach {
                     dungLuong="////";
                     soLuong=sachDuocDoc[13];
                 }
-                else if(loaiSach.toLowerCase().equalsIgnoreCase("PDf")||loaiSach.toLowerCase().equalsIgnoreCase("EPUB")){
+                else if(loaiSach.equalsIgnoreCase("PDf")||loaiSach.equalsIgnoreCase("EPUB")){
                     kichThuoc="////";
                     loaiBia="////";
                     kichCoDungLuong = sachDuocDoc[11];
@@ -579,11 +552,14 @@ public class TuSach {
                     soLuong="////";
                 }
                 
-                if(theloai.toLowerCase().contains(theLoaiCanTim)){
+                if(theloai.contains(theLoaiCanTim)){
                     System.out.printf("| %-50s| %-10s| %-30s| %-9d| %-15s| %-15s| %-10.3f| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", tenSach, maSach, tacGia, soTrang, theloai, nXB, Gia, moTa, loaiSach, kichThuoc, loaiBia, kichCoDungLuong, dungLuong,soLuong,"|");
                     System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
                     found = true;
                 }
+                                try{
+                    Thread.sleep(50);
+                    }catch(InterruptedException e){}
             }
         }catch(IOException e){
             System.out.println("Khong doc duoc file.....\n" + e.getMessage());
@@ -638,25 +614,25 @@ public class TuSach {
         }
         System.out.println("Ban co muon tiep tuc tim kiem? (Y/N)");
         String opt=input.nextLine();
-        while(!opt.toLowerCase().equalsIgnoreCase("N")&&!opt.toLowerCase().equalsIgnoreCase("Y")&&!opt.toLowerCase().equalsIgnoreCase("No")&&!opt.toLowerCase().equalsIgnoreCase("Yes")){
+        while(!opt.equalsIgnoreCase("N")&&!opt.equalsIgnoreCase("Y")&&!opt.equalsIgnoreCase("No")&&!opt.equalsIgnoreCase("Yes")){
                         System.out.println("Lua chon khong phu hop, vui long nhap lai.....");
                         opt = input.nextLine();
                     }
-        if(opt.toLowerCase().equalsIgnoreCase("Y")||opt.toLowerCase().equalsIgnoreCase("Yes"))
+        if(opt.equalsIgnoreCase("Y")||opt.equalsIgnoreCase("Yes"))
             timSach();
     }
 
-    public static void hienThiSachDangKinhDoanh() { 
+    
+    public void hienThiSachDangKinhDoanh() { 
         File file= new File("book.txt");
         try (Scanner scanner = new Scanner(file)) 
         {
             System.out.println("\n\n+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+");
             System.out.println("|                                                                    BOOK  DATABASE                                                                                                                                                                                 |");
             System.out.println("|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|");
-//            System.out.println("|"+"                      Ten Sach                     |" +"  Ma Sach "+"|" + "          Tac Gia              |"+"So Trang  "+"|"+ "     The Loai   |"+ "       NXB      "+"|"+ "    Gia    |"+"                            Mo Ta                  |"+ " Loai Sach|"+ " Size|"+ " Loai Bia |"+ "FSize|"+ "Dung Luong|"+ " So Luong |");
             System.out.printf("| %-50s| %-10s| %-30s| %-9s| %-15s| %-15s| %-10s| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", "Ten Sach", "Ma Sach", "Tac Gia", "So Trang", "The Loai", "NXB", "Gia", "Mo Ta", "Loai Sach","Size","Loai Bia","FSize","Dung Luong","So Luong", "|");
             System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
-            while(scanner.hasNextLine()){   //.availabe: tra ve 1 luong byte co the doc, neu <=0 tuc la doc khong thanh cong
+            while(scanner.hasNextLine()){
                 sachDaHienThi++;
                 String line = scanner.nextLine();
                 String[] sachDuocDoc = line.split("#");
@@ -681,34 +657,31 @@ public class TuSach {
                     dungLuong="////";
                     soLuong=sachDuocDoc[13];
                 }
-                else if(loaiSach.toLowerCase().equalsIgnoreCase("PDf")||loaiSach.toLowerCase().equalsIgnoreCase("EPUB")){
+                else if(loaiSach.equalsIgnoreCase("PDf")||loaiSach.equalsIgnoreCase("EPUB")){
                     kichThuoc="////";
                     loaiBia="////";
                     kichCoDungLuong = sachDuocDoc[11];
                     dungLuong =sachDuocDoc[12];
                     soLuong="////";
                 }
-//                int soLuong = Integer.parseInt(sachDuocDoc[11]);
-//                if (loaiSach.equals("Giay")) 
-//                    System.out.printf("| %-50s| %-9s| %-30s| %-9d| %-15s| %-15s| %-10.3f| %-50s| %-5s| %-5s| %-5s|%n",tenSach, maSach, tacGia, soTrang, theloai, nXB, donGia, moTa, loaiSach, kichThuoc, loaiBia, soLuong, "|");
-//                else{
-//                    System.out.printf("| %-50s| %-9s| %-30s| %-9d| %-15s| %-15s| %-10.2f| %-50s| %-5s| %-5s| %-5s| %n",tenSach, maSach, tacGia, soTrang, theloai, nXB, donGia, moTa, loaiSach, kichCoDungLuong, dungLuong, soLuong, "|");
-//                }
-//                System.out.println("+---------------------------------------------------+----------+-------------------------------+----------+----------------+----------------+-----------+---------------------------------------------------+----------+-----+----------+-----+----------+----------+");
                 System.out.printf("| %-50s| %-10s| %-30s| %-9d| %-15s| %-15s| %-10.3f| %-45s| %-9s| %-4s| %-9s| %-6s| %-10s| %-10s| %n", tenSach, maSach, tacGia, soTrang, theloai, nXB, Gia, moTa, loaiSach, kichThuoc, loaiBia, kichCoDungLuong, dungLuong,soLuong,"|");
                 System.out.println("+---------------------------------------------------+-----------+-------------------------------+----------+----------------+----------------+-----------+----------------------------------------------+----------+-----+----------+-------+-----------+-----------+");
-
+                try {
+				Thread.sleep(200);
+                            } 
+                            catch (InterruptedException e) {
+				}
 
                 if(sachDaHienThi%10==0){
                     System.out.println("Ban co muon tiep tuc hien thi? (Y/N)");
                     Scanner input = new Scanner(System.in);
                     String opt = input.nextLine();
                     
-                    while(!opt.toLowerCase().equalsIgnoreCase("N")&&!opt.toLowerCase().equalsIgnoreCase("Y")&&!opt.toLowerCase().equalsIgnoreCase("No")&&!opt.toLowerCase().equalsIgnoreCase("Yes")){
+                    while(!opt.equalsIgnoreCase("N")&&!opt.equalsIgnoreCase("Y")&&!opt.equalsIgnoreCase("No")&&!opt.equalsIgnoreCase("Yes")){
                         System.out.println("Lua chon khong phu hop, vui long nhap lai.....");
                         opt = input.nextLine();
                     }
-                    if(opt.toLowerCase().equalsIgnoreCase("N")){
+                    if(opt.equalsIgnoreCase("N")||opt.equalsIgnoreCase("No")){
                         sachDaHienThi=0;
                         break;
                     }
@@ -723,9 +696,192 @@ public class TuSach {
         }
     }
     
+    
+    private void suaTenSach(){
+        String fileName = "book.txt";
+        File file = new File(fileName);
+        Scanner input = new Scanner(System.in);
+
+        try (Scanner scanner = new Scanner(file)) {
+            System.out.print("Nhập mã sách bạn muốn chỉnh sửa: ");
+            String maSachCanSua = input.nextLine();
+
+            while (!maSachCanSua.matches("^[a-zA-Z0-9\\s]+$") || maSachCanSua.trim().isEmpty()) {
+                System.out.println("Lựa chọn không phù hợp, vui lòng nhập lại.....");
+                maSachCanSua = input.nextLine();
+            }
+
+            //Tạo 1 danh sách tạm chứa tt các sách modified
+            List<String> modifiedBookInfo = new ArrayList<>();
+
+            while (scanner.hasNextLine()) {
+                String line = scanner.nextLine();
+                String[] sachDuocDoc = line.split("#");
+                String maSach = sachDuocDoc[1];
+
+                if (maSach.equalsIgnoreCase(maSachCanSua)) {
+                    //Tìm thấy sách trùng khớp, cho user chỉnh sửa
+                    System.out.println("Nhập tên sách mới: ");
+                    String newBookName = input.nextLine();
+                    sachDuocDoc[0] = newBookName; // Cập nhật tên sách
+
+                    // Chuyển cái array lại thành 1 line và add nó vào midifed list
+                    String modifiedLine = String.join("#", sachDuocDoc);
+                    modifiedBookInfo.add(modifiedLine);
+                } else {
+                    modifiedBookInfo.add(line); // Giữ nhứng sách không chỉnh sửa trong list
+                }
+            }
+
+            // Viết lại thông tin sách được chỉnh sửa
+            try (FileWriter writer = new FileWriter(fileName)) {
+                for (String modifiedLine : modifiedBookInfo) {
+                    writer.write(modifiedLine + "\n");
+                }
+                System.out.println("Cập nhật thông tin sách thành công.");
+            } catch (IOException e) {
+                System.out.println("Error writing to file: " + e.getMessage());
+            }
+        } catch (FileNotFoundException e) {
+            System.out.println("File not found....." + e.getMessage());
+        }
+    }
+    private void suaGiaSach(){
+        String fileName = "book.txt";
+        File file = new File(fileName);
+        Scanner input = new Scanner(System.in);
+
+        try (Scanner scanner = new Scanner(file)) {
+            System.out.print("Nhập mã sách bạn muốn chỉnh sửa: ");
+            String maSachCanSua = input.nextLine();
+
+            while (!maSachCanSua.matches("^[a-zA-Z0-9\\s]+$") || maSachCanSua.trim().isEmpty()) {
+                System.out.println("Lựa chọn không phù hợp, vui lòng nhập lại.....");
+                maSachCanSua = input.nextLine();
+            }
+
+            //Tạo 1 danh sách tạm chứa tt các sách modified
+            List<String> modifiedBookInfo = new ArrayList<>();
+
+            while (scanner.hasNextLine()) {
+                String line = scanner.nextLine();
+                String[] sachDuocDoc = line.split("#");
+                String maSach = sachDuocDoc[1];
+
+                if (maSach.equalsIgnoreCase(maSachCanSua)) {
+                    //Tìm thấy sách trùng khớp, cho user chỉnh sửa
+                    System.out.println("Nhập giá sách mới: ");
+                    String newBookPrice = input.nextLine();
+                    sachDuocDoc[6] = newBookPrice; // Cập nhật tên sách
+
+                    // Chuyển cái array lại thành 1 line và add nó vào midifed list
+                    String modifiedLine = String.join("#", sachDuocDoc);
+                    modifiedBookInfo.add(modifiedLine);
+                } else {
+                    modifiedBookInfo.add(line); // Giữ nhứng sách không chỉnh sửa trong list
+                }
+            }
+
+            // Viết lại thông tin sách được chỉnh sửa
+            try (FileWriter writer = new FileWriter(fileName)) {
+                for (String modifiedLine : modifiedBookInfo) {
+                    writer.write(modifiedLine + "\n"); // Write each modified line to the file
+                }
+                System.out.println("Cập nhật thông tin sách thành công.");
+            } catch (IOException e) {
+                System.out.println("Error writing to file: " + e.getMessage());
+            }
+        } catch (FileNotFoundException e) {
+            System.out.println("File not found....." + e.getMessage());
+        }
+    }
+    private void suaSoLuongSach(){
+        String fileName = "book.txt";
+        File file = new File(fileName);
+        Scanner input = new Scanner(System.in);
+
+        try (Scanner scanner = new Scanner(file)) {
+            System.out.print("Nhập mã sách bạn muốn chỉnh sửa: ");
+            String maSachCanSua = input.nextLine();
+
+            while (!maSachCanSua.matches("^[a-zA-Z0-9\\s]+$") || maSachCanSua.trim().isEmpty()) {
+                System.out.println("Lựa chọn không phù hợp, vui lòng nhập lại.....");
+                maSachCanSua = input.nextLine();
+            }
+
+            //Tạo 1 danh sách tạm chứa tt các sách modified
+            List<String> modifiedBookInfo = new ArrayList<>();
+
+            while (scanner.hasNextLine()) {
+                String line = scanner.nextLine();
+                String[] sachDuocDoc = line.split("#");
+                String maSach = sachDuocDoc[1];
+
+                if (maSach.equalsIgnoreCase(maSachCanSua)) {
+                    //Tìm thấy sách trùng khớp, cho user chỉnh sửa
+                    System.out.println("Nhập số lượng sách mới: ");
+                    String newBookQuantity = input.nextLine();
+                    sachDuocDoc[13] = newBookQuantity; // Cập nhật tên sách
+
+                    // Chuyển cái array lại thành 1 line và add nó vào midifed list
+                    String modifiedLine = String.join("#", sachDuocDoc);
+                    modifiedBookInfo.add(modifiedLine);
+                } else {
+                    modifiedBookInfo.add(line); // Giữ nhứng sách không chỉnh sửa trong list
+                }
+            }
+
+            // Viết lại thông tin sách được chỉnh sửa
+            try (FileWriter writer = new FileWriter(fileName)) {
+                for (String modifiedLine : modifiedBookInfo) {
+                    writer.write(modifiedLine + "\n"); // Write each modified line to the file
+                }
+                System.out.println("Cập nhật thông tin sách thành công.");
+            } catch (IOException e) {
+                System.out.println("Error writing to file: " + e.getMessage());
+            }
+        } catch (FileNotFoundException e) {
+            System.out.println("File not found....." + e.getMessage());
+        }
+    }
     public void chinhSuaThongTinSach(){
+        String code;
+        Scanner input = new Scanner(System.in);
         
+        System.out.println("\t+---------- Query Options ----------+");
+        System.out.println("\t|     1. Sửa Tên Sách               |");
+        System.out.println("\t|     2. Sửa Giá Sách               |");
+        System.out.println("\t|     3. Sửa Số Lượng Sách          |");
+        System.out.println("\t+-----------------------------------+");
+        System.out.print("Moi ban nhap:  ");
+        code = input.nextLine();
+        while(!code.equals("1")&&!code.equals("2")&&!code.equals("3")&&!code.equals("4")&&!code.equals("5")&&!code.equals("6")){
+            System.out.println("Lua chon khong hop le, vui long nhap lai.....");
+            code=input.nextLine();
+        }
+        switch(code){
+            case "1":
+                System.out.println("\n-------------SỬA TÊN SÁCH-------------");
+                suaTenSach();
+                break;
+            case "2":
+                System.out.println("\n-------------SỬA GIÁ SÁCH-------------");
+                suaGiaSach();
+                break;
+            case "3":
+                System.out.println("\n-------------SỬA SỐ LƯỢNG SÁCH-------------");
+                suaSoLuongSach();
+                break;
+            
+        }
+        System.out.println("Có muốn tiếp tục chỉnh sửa ? (Y/N)");
+        String opt=input.nextLine();
+        while(!opt.equalsIgnoreCase("N")&&!opt.equalsIgnoreCase("Y")&&!opt.equalsIgnoreCase("No")&&!opt.equalsIgnoreCase("Yes")){
+                        System.out.println("Lựa chọn không phù hợp, vui lòng nhập lại.....");
+                        opt = input.nextLine();
+                    }
+        if(opt.equalsIgnoreCase("Y")||opt.equalsIgnoreCase("Yes"))
+            chinhSuaThongTinSach();
     }
     
-   
 }
